Fix homer header message

--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -8,7 +8,7 @@ homer_config_message:
   title: "Welcome !"
   content: |
     This dashboard is configured to list the applications deployed on the Kubernetes cluster. 
-    If promted, the credentials are usually : user / Passw0rd
+    If promted, the credentials are usually : user_ldap / Passw0rd
   style: "is-dark"
 
 # Optional navbar
