--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
@@ -62,7 +62,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatornotready
       summary: Prometheus operator not ready
     expr: |
-      min by(namespace, controller) (max_over_time(prometheus_operator_ready{job="prometheus-operator",namespace="monitoring"}[5m]) == 0)
+      min by (controller,namespace) (max_over_time(prometheus_operator_ready{job="prometheus-operator",namespace="monitoring"}[5m]) == 0)
     for: 5m
     labels:
       severity: warning
