--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-apiserver.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-apiserver.alerts.yaml
@@ -28,7 +28,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeaggregatedapierrors
       summary: Kubernetes aggregated API has reported errors.
     expr: |
-      sum by(name, namespace)(increase(aggregator_unavailable_apiservice_total[10m])) > 4
+      sum by(name, namespace, cluster)(increase(aggregator_unavailable_apiservice_total[10m])) > 4
     labels:
       severity: warning
   - alert: KubeAggregatedAPIDown
@@ -38,7 +38,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeaggregatedapidown
       summary: Kubernetes aggregated API is down.
     expr: |
-      (1 - max by(name, namespace)(avg_over_time(aggregator_unavailable_apiservice[10m]))) * 100 < 85
+      (1 - max by(name, namespace, cluster)(avg_over_time(aggregator_unavailable_apiservice[10m]))) * 100 < 85
     for: 5m
     labels:
       severity: warning
