--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system.alerts.yaml
@@ -7,7 +7,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeversionmismatch
       summary: Different semantic versions of Kubernetes components running.
     expr: |
-      count(count by (git_version) (label_replace(kubernetes_build_info{job!~"kube-dns|coredns"},"git_version","$1","git_version","(v[0-9]*.[0-9]*).*"))) > 1
+      count by (cluster) (count by (git_version, cluster) (label_replace(kubernetes_build_info{job!~"kube-dns|coredns"},"git_version","$1","git_version","(v[0-9]*.[0-9]*).*"))) > 1
     for: 15m
     labels:
       severity: warning
