--- a/ansible/install_applications/vars/infra-zonemta.yml
+++ b/ansible/install_applications/vars/infra-zonemta.yml
@@ -7,7 +7,8 @@ _zonemta_var_loader:
     tag: "17.7.2-alpine3.15"
   # 3.2.4+ has issues with the API
   # Each API call (prometheus metrics included) returns a 500
-  # 3.3.0 crashes when a /metrics request is received
+  # 3.3.0+ crashes when a /metrics request is received : https://github.com/zone-eu/zone-mta/issues/291
+  # Still happens with 3.4.1
   version: 3.2.3
   namespace: "infra-zonemta"
 
@@ -61,7 +62,7 @@ _zonemta_mongo_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/mongo"
-    tag: "5.0.6-focal"
+    tag: "5.0.9-focal"
 
 zonemta_mongo:
   base_image: "{{ _zonemta_mongo_var_loader.base_image }}"
@@ -95,7 +96,7 @@ _zonemta_redis_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/redis"
-    tag: "6.2.6-alpine3.15"
+    tag: "7.0.3-alpine3.16"
 
 zonemta_redis:
   base_image: "{{ _zonemta_redis_var_loader.base_image }}"
