--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -4,7 +4,7 @@ _fluentd_var_loader:
   base_image:
     repo: "docker.io"
     name: "fluent/fluentd"
-    tag: "v1.14.6-debian-1.0"
+    tag: "v1.15.0-debian-amd64-1.0"
   namespace: "logging-fluentd"
 
 fluentd:
@@ -35,7 +35,7 @@ fluentd:
 
   plugins:
     elasticsearch:
-      version: "5.2.2"
+      version: "5.2.3"
     prometheus:
       version: "2.0.3"
     ua_parser:
