--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/prometheus.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/prometheus.alerts.yaml
@@ -270,6 +270,17 @@
     for: 5m
     labels:
       severity: critical
+  - alert: PrometheusHighQueryLoad
+    annotations:
+      description: Prometheus {{$labels.namespace}}/{{$labels.pod}} query API has
+        less than 20% available capacity in its query engine for the last 15 minutes.
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus/prometheushighqueryload
+      summary: Prometheus is reaching its maximum capacity serving concurrent requests.
+    expr: |
+      avg_over_time(prometheus_engine_queries{job="prometheus-k8s"}[5m]) / max_over_time(prometheus_engine_queries_concurrent_max{job="prometheus-k8s"}[5m]) > 0.8
+    for: 15m
+    labels:
+      severity: warning
   - alert: PrometheusErrorSendingAlertsToAnyAlertmanager
     annotations:
       description: '{{ printf "%.1f" $value }}% minimum errors while sending alerts
