--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -156,6 +156,38 @@ glusterfs_volumes:
     labels:
       app.kubernetes.io/name: ttrss
       app.kubernetes.io/component: pgsql
+  nextcloud-app:
+    replicas: 2
+    capacity: 768M
+    arbiterCapacity: 64M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: nextcloud
+      app.kubernetes.io/component: nextcloud
+      storage: app
+  nextcloud-data:
+    replicas: 2
+    capacity: 128M
+    arbiterCapacity: 16M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: nextcloud
+      app.kubernetes.io/component: nextcloud
+      storage: data
+  nextcloud-mysql:
+    replicas: 2
+    capacity: 256M
+    arbiterCapacity: 32M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: nextcloud
+      app.kubernetes.io/component: mysql
   paperless-data:
     replicas: 2
     capacity: 128M
