Fix remove new taint on kubernetes control plane

--- a/ansible/inventories/vagrant/host_vars/master-test-1/kubernetes-postinstall.yml
+++ b/ansible/inventories/vagrant/host_vars/master-test-1/kubernetes-postinstall.yml
@@ -17,3 +17,6 @@ kubernetes_node_taints:
   - key: node-role.kubernetes.io/master
     effect: NoSchedule
     state: absent
+  - key: node-role.kubernetes.io/control-plane
+    effect: NoSchedule
+    state: absent
