--- a/ansible/inventories/vagrant/group_vars/all/apps/auth-openldap.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/auth-openldap.yml
@@ -14,6 +14,7 @@ openldap_ldap_structure_groups_ou_dns:
   grafana_roles: "ou=grafana_roles,{{ openldap_ldap_basedn }}"
   jellyfin_roles: "ou=jellyfin_roles,{{ openldap_ldap_basedn }}"
   gitea_roles: "ou=gitea_roles,{{ openldap_ldap_basedn }}"
+  nextcloud_roles: "ou=nextcloud_roles,{{ openldap_ldap_basedn }}"
 
 openldap_ldap_users:
   - id: user_ldap
@@ -106,6 +107,11 @@ openldap_ldap_groups:
     ou: app_groups
     members:
       - user_ldap
+  - id: nextcloud
+    description: Nextcloud
+    ou: app_groups
+    members:
+      - user_ldap
 
   # Roles for Grafana
   - id: admin
@@ -143,3 +149,10 @@ openldap_ldap_groups:
     ou: gitea_roles
     members:
       - user_ldap
+
+  # Roles for Nextcloud
+  #- id: nextcloud_something
+  #  description: Nextcloud Something
+  #  ou: nextcloud_roles
+  #  members:
+  #    - user_ldap
