--- a/ansible/install_applications/roles/tool_nextcloud_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/tasks/main.yml
@@ -3,6 +3,7 @@
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/custom-namespace.yml
   vars:
     application_namespace: "{{ nextcloud.namespace }}"
+    create_nfs_pvc: [ nfs-nextcloud ]
 
 - name: Deploy Nextcloud backup script
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
