--- a/ansible/install_applications/roles/tool_nextcloud_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/defaults/main.yml
@@ -6,3 +6,17 @@ nextcloud_enabled: true
 
 #nextcloud_mysql_password: "clear_password"
 #nextcloud_mysql_root_password: "clear_password"
+
+nextcloud_task_rescheduler_config_schedules:
+  - category: "weekly"
+    type: regular
+    unit: weeks
+    value: 1
+  - category: "monthly"
+    type: regular
+    unit: months
+    value: 1
+
+#nextcloud_task_rescheduler_config_users:
+#  - name: some_username
+#    password: some_password  # Ideally, an app password instead of the user's password
