Add tool (public) domain and certs

--- a/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
@@ -56,6 +56,8 @@ lemonldap_location_rules:
   - domain: "gotify.web.{{ web_base_domain }}"
     default_rule: skip
 
+  - domain: "*.tool.{{ web_base_domain }}"
+    default_rule: groupMatch($hGroups, 'cn', 'tool')
   - domain: "*.tool.intra.{{ web_base_domain }}"
     default_rule: groupMatch($hGroups, 'cn', 'tool')
   - domain: "syncthing.tool.intra.{{ web_base_domain }}"
