--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -69,6 +69,14 @@ openssl_custom_pki:
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
+      - name: "tool.{{ web_base_domain }}"
+        common_name: "tool.{{ web_base_domain }}"
+        san: ["*.tool.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
       - name: "tool.intra.{{ web_base_domain }}"
         common_name: "tool.intra.{{ web_base_domain }}"
         san: ["*.tool.intra.{{ web_base_domain }}"]
