--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -131,6 +131,10 @@
   tags: kubernetes-app-web-homer
   when: homer_enabled | bool
 
+- import_playbook: app-tool-miniflux.yml
+  tags: kubernetes-app-tool-miniflux
+  when: miniflux_enabled | bool
+
 - import_playbook: app-tool-paperless.yml
   tags: kubernetes-app-tool-paperless
   when: paperless_enabled | bool
