--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -156,6 +156,16 @@ glusterfs_volumes:
     labels:
       app.kubernetes.io/name: ttrss
       app.kubernetes.io/component: pgsql
+  miniflux-pgsql:
+    replicas: 2
+    capacity: 256M
+    arbiterCapacity: 64M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: miniflux
+      app.kubernetes.io/component: pgsql
   nextcloud-app:
     replicas: 2
     capacity: 768M
