--- a/ansible/install_applications/vars/tool-miniflux.yml
+++ b/ansible/install_applications/vars/tool-miniflux.yml
@@ -90,3 +90,41 @@ miniflux_pgsql:
   user: "{{ miniflux_pgsql_user | default('miniflux') }}"
   database: "{{ miniflux_pgsql_database | default('miniflux') }}"
   password: "{{ miniflux_pgsql_password | default('clear_password') }}"
+
+
+# To avoid loops inside miniflux
+_miniflux_reminiflux_var_loader:
+  base_builder_image:
+    repo: "docker.io"
+    name: "library/node"
+    tag: "18.8.0-alpine3.16"
+  base_image:
+    repo: "docker.io"
+    name: "library/nginx"
+    tag: "1.23.1-alpine"
+  repo: "reminiflux/reminiflux"
+  commit: "153dc9464cef69f7c29bff1d680cfa0013b5e281"
+  
+miniflux_reminiflux:
+  base_builder_image: "{{ _miniflux_reminiflux_var_loader.base_builder_image }}"
+  base_image: "{{ _miniflux_reminiflux_var_loader.base_image }}"
+  private_image:
+    repo: "{{ docker_private_registry.url }}"
+    name: "reminiflux-{{ _miniflux_reminiflux_var_loader.base_image.name | regex_replace('.*/', '') }}"
+    tag: "{{ _miniflux_reminiflux_var_loader.base_image.tag }}-{{ _miniflux_reminiflux_var_loader.commit }}"
+  repo: "{{ _miniflux_reminiflux_var_loader.repo }}"
+  commit: "{{ _miniflux_reminiflux_var_loader.commit }}"
+    
+  labels_def:
+    app.kubernetes.io/name: miniflux
+    app.kubernetes.io/component: reminiflux
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _miniflux_reminiflux_var_loader.commit }}"
+    app.kubernetes.io/part-of: miniflux
+
+  container:
+    requests_cpu: "{{ miniflux_reminiflux_container_requests_cpu | default('25m') }}"
+    requests_memory: "{{ miniflux_reminiflux_container_requests_memory | default('16Mi') }}"
+    limits_cpu: "{{ miniflux_reminiflux_container_limits_cpu | default('100m') }}"
+    limits_memory: "{{ miniflux_reminiflux_container_limits_memory | default('16Mi') }}"
