Add miniflux and reminiflux to homer

--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -100,6 +100,16 @@ homer_config_services:
   - name: "Tools"
     icon: "fas fa-toolbox"
     items:
+      - name: "Miniflux"
+        logo: "assets/dashboard-icons/png/miniflux.png"
+        url: "https://miniflux.tool.{{ web_base_domain }}"
+        subtitle: "Miniflux is a minimalist and opinionated feed reader"
+        target: "_blank"
+      - name: "Reminiflux"
+        logo: "assets/dashboard-icons/png/miniflux.png"
+        url: "https://miniflux.tool.{{ web_base_domain }}/reminiflux/"
+        subtitle: "Alternative web frontend for Miniflux"
+        target: "_blank"
       - name: "Nextcloud"
         logo: "assets/dashboard-icons/png/nextcloud.png"
         url: "https://nextcloud.tool.intra.{{ web_base_domain }}"
