--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -123,8 +123,8 @@
   tags: kubernetes-app-monitoring-grafana
   when: grafana_enabled | bool
 
-- import_playbook: app-web-homer.yml
-  tags: kubernetes-app-web-homer
+- import_playbook: app-tool-homer.yml
+  tags: kubernetes-app-tool-homer
   when: homer_enabled | bool
 
 - import_playbook: app-tool-miniflux.yml
