--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
@@ -89,7 +89,7 @@ homer_config_services:
     items:
       - name: "Homer"
         logo: "logo.png"
-        url: "https://homer.web.{{ web_base_domain }}{{ _homer_var_loader.context_root }}"
+        url: "https://homer.tool.{{ web_base_domain }}{{ _homer_var_loader.context_root }}"
         subtitle: "A very simple static homepage for your server"
         target: "_blank"
   - name: "Tools"
