--- a/ansible/install_applications/roles/tool_homer_deploy/meta/main.yml
+++ b/ansible/install_applications/roles/tool_homer_deploy/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application web-homer"
+  description: "Deploy application tool-homer"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
