--- a/ansible/install_applications/vars/tool-homer.yml
+++ b/ansible/install_applications/vars/tool-homer.yml
@@ -13,7 +13,7 @@ _homer_var_loader:
 homer:
   enabled: "{{ homer_enabled | default(True) }}"
 
-  namespace: "web-homer"
+  namespace: "tool-homer"
   base_image: "{{ _homer_var_loader.base_image }}"
   private_image:
     repo: "{{ docker_private_registry.url }}"
