Rename gotify domain from web to infra

--- a/ansible/install_applications/roles/infra_gotify_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra_gotify_deploy/tasks/main.yml
@@ -48,7 +48,7 @@
     url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/user"
     method: GET
     headers:
-      Host: "gotify.web.{{ web_base_domain }}"
+      Host: "gotify.infra.{{ web_base_domain }}"
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
@@ -61,7 +61,7 @@
     url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/user"
     method: POST
     headers:
-      Host: "gotify.web.{{ web_base_domain }}"
+      Host: "gotify.infra.{{ web_base_domain }}"
     body:
       name: "{{ item.name }}"
       pass: "{{ item.password }}"
@@ -81,7 +81,7 @@
     url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/application"
     method: GET
     headers:
-      Host: "gotify.web.{{ web_base_domain }}"
+      Host: "gotify.infra.{{ web_base_domain }}"
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
@@ -100,7 +100,7 @@
     url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/application"
     method: POST
     headers:
-      Host: "gotify.web.{{ web_base_domain }}"
+      Host: "gotify.infra.{{ web_base_domain }}"
     body:
       name: "{{ item.1.name }}"
       description: "{{ item.1.desc }}"
