--- a/ansible/install_applications/roles/home_homeassistant_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home_homeassistant_deploy/tasks/main.yml
@@ -40,7 +40,7 @@
     url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ gotify.context_root }}/application"
     method: GET
     headers:
-      Host: "gotify.web.{{ web_base_domain }}"
+      Host: "gotify.infra.{{ web_base_domain }}"
     return_content: yes
     validate_certs: no
     force_basic_auth: yes
