--- a/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
@@ -9,6 +9,9 @@ lemonldap_location_rules:
 
   - domain: "*.infra.{{ web_base_domain }}"
     default_rule: groupMatch($hGroups, 'cn', 'infra')
+  # Disable Auth for Gotify
+  - domain: "gotify.infra.{{ web_base_domain }}"
+    default_rule: skip
   - domain: "*.infra.intra.{{ web_base_domain }}"
     default_rule: groupMatch($hGroups, 'cn', 'infra')
   - domain: "*.auth.intra.{{ web_base_domain }}"
@@ -52,9 +55,6 @@ lemonldap_location_rules:
 
   - domain: "*.web.{{ web_base_domain }}"
     default_rule: groupMatch($hGroups, 'cn', 'web')
-  # Disable Auth for Gotify
-  - domain: "gotify.web.{{ web_base_domain }}"
-    default_rule: skip
 
   - domain: "*.tool.{{ web_base_domain }}"
     default_rule: groupMatch($hGroups, 'cn', 'tool')
