--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -53,6 +53,14 @@ openssl_custom_pki:
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
+      - name: "infra.{{ web_base_domain }}"
+        common_name: "infra.{{ web_base_domain }}"
+        san: ["*.infra.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
       - name: "infra.intra.{{ web_base_domain }}"
         common_name: "infra.intra.{{ web_base_domain }}"
         san: ["*.infra.intra.{{ web_base_domain }}"]
@@ -143,6 +151,7 @@ openssl_custom_pki:
           - "*.intra.{{ web_base_domain }}"
           - "*.auth.{{ web_base_domain }}"
           - "*.auth.intra.{{ web_base_domain }}"
+          - "*.infra.{{ web_base_domain }}"
           - "*.infra.intra.{{ web_base_domain }}"
           - "*.log.intra.{{ web_base_domain }}"
           - "*.monitoring.intra.{{ web_base_domain }}"
